# ScreenCast

./: .gitignore  COPYING  README.md  com.oazisn.ScreenCast.json  meson.build
data/: com.oazisn.ScreenCast.desktop.in  com.oazisn.ScreenCast.gschema.xml  com.oazisn.ScreenCast.metainfo.xml.in  com.oazisn.ScreenCast.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  main.vala  meson.build  screencast.gresource.xml  window.blp  window.ui  window.vala  window_controller.vala  window_view.vala
subprojects/: blueprint-compiler.wrap
